# config-file

./: CMakeLists.txt  COPYRIGHT.txt  README.md  configfile.cpp  configfile.h  configoption.cpp  configoption.h  file.cpp  file.h  option.cpp  option.h  strlib.cpp  strlib.h
